--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": " https://nikhiljain123456.github.io/Food-Recipes",
+  "homepage": " https://Nikhiljain123456.github.io/Food-Recipes",
   "name": "foodrecepies",
   "version": "0.1.0",
   "private": true,
