--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "homepage": " https://Nikhiljain123456.github.io/Food-Recipes",
+ 
   "name": "foodrecepies",
+  "homepage": " https://Nikhiljain123456.github.io/Food-Recipes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -40,8 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
   }
 }
